move base styl to partials

--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -30,6 +30,11 @@
 
 // Load base
 @import "base/base.styl"
+@import "base/_utils.styl"
+@import "base/_titles.styl"
+@import "base/_text.styl"
+@import "base/_links.styl"
+
 
 // Objects
 @import "objects/header.styl"
