Upload colors social network footer

--- a/ecoleinfographie/resources/assets/stylus/components/footer.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/footer.styl
@@ -44,6 +44,17 @@
       transition .3s $ease-out-back all
       transition-property transform, fill, opacity
 
+.footer .social__link--facebook:hover svg circle + circle
+  fill $cFacebook
+.footer .social__link--twitter:hover svg circle + circle
+  fill $cTwitter
+.footer .social__link--pinterest:hover svg circle + circle
+  fill $cPinterest
+.footer .social__link--behance:hover svg circle + circle
+  fill $cBehance
+.footer .social__link--dribble:hover svg circle + circle
+  fill $cDribble
+
 .footer
   .section
     position: relative
