--- a/ecoleinfographie/resources/assets/stylus/settings/colors.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/colors.styl
@@ -23,3 +23,9 @@ $cText-greyblue = #566273
 $cGreyLight = #F4F4F5
 $cGreyFooter = #E9E9E9
 
+/* Social Colors */
+$cFacebook = #3b5998
+$cTwitter = #55acee
+$cPinterest = #cb2027
+$cBehance = #1769ff
+$cDribble = #ea4c89
