create breadcrumb and style

--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -6,8 +6,8 @@
 @import "settings/global.styl"
 @import "settings/easing.styl"
 @import "settings/icons.styl"
-@import "settings/colors";
-@import "settings/fonts";
+@import "settings/colors"
+@import "settings/fonts"
 @import "settings/sizes.styl"
 
 
@@ -50,6 +50,7 @@
 @import "components/footer.styl"
 @import "components/_dots.styl"
 @import "components/_arrow-circle.styl"
+@import "components/_breadcrumb.styl"
 //// HOME
 @import "components/home/intro.styl"
 @import "components/home/location.styl"
