--- a/ecoleinfographie/resources/assets/stylus/base/_titles.styl
+++ b/ecoleinfographie/resources/assets/stylus/base/_titles.styl
@@ -2,12 +2,20 @@
 		STYLES FOR TITLES
 \************************************/
 
-.title51
-  font-size s(51.88)
+.title-bigTitleHome
+  font-size s($text-bigTitleHome)
   line-height 1.1
   letter-spacing 1.25px
   font-weight 700
   color $cBlueTitles
+
+.title51
+  font-size s($text-bigTitleHome)
+  line-height 1.1
+  letter-spacing 1.25px
+  font-weight 700
+  color $cBlueTitles
+
 
 .titleXXXL
   font-size s($text-XXXL)
