--- a/ecoleinfographie/resources/assets/stylus/settings/sizes.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/sizes.styl
@@ -10,6 +10,10 @@ $text-XXL = 33.2
 $text-XL = 26.56
 $text-L = 21.25
 
+$sz1 = 64.85
+$sz2 = 51.88
+$sz9 = 13
+
 // GridzWidth
 containerGridz()
   max-width s($ws_sGridzTotalWidth, 16)
