--- a/ecoleinfographie/resources/assets/stylus/components/header.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/header.styl
@@ -1,3 +1,6 @@
+/************************************\
+		header-shawl
+\************************************/
 .header-shawl
   background linear-gradient(138deg, rgba(12,81,107,0.92) 0%, rgba(5,43,56,0.96) 80%), url("../img/header-home-background.jpg") no-repeat center center/cover
   &__title
@@ -64,6 +67,10 @@
     color $cWhite
     filter none
 
+
+/************************************\
+		LOGO
+\************************************/
 .logo
   position: relative
   top s(15, 18)
@@ -72,3 +79,74 @@
   font-size 18px
   letter-spacing 1px
   padding s(10, 18) s(0)
+
+/************************************\
+        HEADER TRADES
+\************************************/
+.header-trades
+  position: relative
+  min-height 50em
+  padding s(35, 16) s(40,16) 0 s(40,16)
+  &__title
+    @extend .title-bigTitleHome
+    position: absolute
+    top 33%
+    color $cWhite
+    text-shadow: 0 1px 1px rgba(0,0,0,0.50);
+  &__subnav
+    position: absolute
+    top 46%
+    &__title
+      @extend .hidden
+    &__item
+      margin-bottom s(15)
+      &:last-child
+        margin-bottom 0
+    &__link
+      @extend .linkArrowLarge
+      color rgba(255,255,255,.8)
+      transform translate3D(0, 0, 0)
+      transition .2s ease all
+      transition-property color, transform
+      &:hover
+      &:focus
+        color rgba(255,255,255,1)
+        transform translate3D(3px, 0, 0)
+        transition-property color, transform
+
+/************************************\
+		HEADER-WEBHOME
+\************************************/
+.header-webhome
+  background repeating-linear-gradient(321deg,rgba(0, 4, 40, 0.99) 0%,rgba(0, 49, 105, 0.99) 65.9%,rgb(0, 72, 137) 100%,rgb(0, 78, 146) 100%);
+  -webkit-backface-visibility: hidden;
+
+.header-webhome .header__wrapper
+  @extend .cover
+  padding s(35, 16) s(40,16) 0 s(40,16)
+  box-sizing content-box
+.phone-illu
+  display inline-block
+  float: right
+  position absolute
+  bottom s(-100)
+  right: 0
+  z-index 10
+  /*&__container
+    position: relative
+    containerGridz()
+    min-height 50em
+    z-index 10*/
+  &__img-container
+    display inline-block
+  &__parallax-wrapper
+    position absolute
+    top s(64)
+    right: s(59)
+    width s(232)
+    height s(410)
+    background-color $cGreyFooter
+    overflow hidden
+
+.container
+  padding-top 1000px
