update header webhome

--- a/ecoleinfographie/resources/assets/stylus/components/header.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/header.styl
@@ -130,13 +130,8 @@
   float: right
   position absolute
   bottom s(-100)
-  right: 0
+  right: s(65)
   z-index 10
-  /*&__container
-    position: relative
-    containerGridz()
-    min-height 50em
-    z-index 10*/
   &__img-container
     display inline-block
   &__parallax-wrapper
