--- a/ecoleinfographie/resources/assets/stylus/components/header.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/header.styl
@@ -145,3 +145,11 @@
 
 .container
   padding-top 1000px
+
+#particles
+  position: absolute
+  width: 100%
+  height: 100%
+canvas
+  display: block
+  vertical-align: bottom
