create style & js for background opacity on scroll

--- a/ecoleinfographie/resources/assets/stylus/components/header.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/header.styl
@@ -150,6 +150,11 @@
   position: absolute
   width: 100%
   height: 100%
+
 canvas
   display: block
   vertical-align: bottom
+
+.background-opacity
+  position: absolute
+  @extend .cover
