--- a/ecoleinfographie/resources/assets/stylus/components/header.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/header.styl
@@ -146,14 +146,15 @@
 .container
   padding-top 1000px
 
-#particles
-  position: absolute
-  width: 100%
-  height: 100%
-
-canvas
+.header-webhome .canvas
   display: block
-  vertical-align: bottom
+  height s(800)
+
+.header-webhome .particles-js
+  position: absolute
+  @extend .cover
+
+
 
 .background-opacity
   position: absolute
