fix script opacity on scroll on header

--- a/ecoleinfographie/resources/assets/stylus/components/header.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/header.styl
@@ -125,6 +125,7 @@
   @extend .cover
   padding s(35, 16) s(40,16) 0 s(40,16)
   box-sizing content-box
+  z-index 2
 .phone-illu
   display inline-block
   float: right
@@ -151,7 +152,6 @@
   height s(800)
 
 .header-webhome .particles-js
-  position: absolute
   @extend .cover
 
 
@@ -159,3 +159,4 @@
 .background-opacity
   position: absolute
   @extend .cover
+  z-index 1
