--- a/ecoleinfographie/resources/assets/stylus/components/navigation.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/navigation.styl
@@ -21,7 +21,7 @@
       top: 47%
       width 1px
       height s(12,16)
-      background-color rgba(255,255,255,0.5)
+      background-color rgba(255,255,255,0.35)
     &:nth-child(n+5):after
       display: none
   &__link
@@ -29,8 +29,8 @@
     display inline-block
     padding s(10,$sz-menu) s(20,$sz-menu)
     border 1px solid transparent
-    Catamaran($sz-menu, 16, 400, 1)
-    letter-spacing s(0.2, $sz-menu)
+    font-size s($sz-menu)
+    letter-spacing 0.5px
     color $cWhite
     transition .2s ease opacity
     &:hover
@@ -39,23 +39,25 @@
       transition .3s ease opacity
     &--cta
       position: relative
-      margin-left s(20, $sz-menu)
-      padding s(14,$sz-menu) s(32, $sz-menu) s(21,$sz-menu)
+      margin-left s(40, $sz-menu)
+      padding s(21,$sz-menu) s(50, $sz-menu) s(24,$sz-menu)
       background-color rgba(255,255,255,0.10)
-      Catamaran($sz-menu, 16, 500, 1)
-      letter-spacing 0.3px
-      border 1px solid $cWhite
-      border-radius s(5, $sz-menu)
+      font-size s(15)
+      font-weight: 700
+      letter-spacing 1.5px
+      border 2px solid $cWhite
+      //border-radius s(5, $sz-menu)
+      text-transform: uppercase
       &:hover
       &:focus
         opacity 1
       &:before
         content: '';
         position: absolute;
-        width: 0%;
-        height: 100%;
         top: 0;
         left: 0;
+        width: 0%;
+        height: 100%;
         background: rgba(255,255,255,0.2);
         z-index: -1;
         transition .3s width;
