styles section web-what

--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -58,6 +58,8 @@
 @import "components/home/sliderBlog.styl"
 @import "components/home/portfolio-home.styl"
 @import "components/home/pros-home.styl"
+//// WebHome
+@import "components/web_home/web_home.styl"
 
 
 // Trumps
