--- a/ecoleinfographie/resources/assets/stylus/base/_utils.styl
+++ b/ecoleinfographie/resources/assets/stylus/base/_utils.styl
@@ -12,6 +12,22 @@
   top: -99999px
   left: -99999px
 
+// Shawl // In before or after
+.baseshawl
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: s(-1px);
+  -webkit-transform: skewY(-4.5deg);
+  transform: skewY(-4.5deg);
+  -webkit-transform-origin: 100% 0;
+  transform-origin: 0% 0;
+  background-color: #f3f3f7;
+  z-index: -1;
+
+
 // Container
 .containerGridz
   max-width s($ws_sGridzTotalWidth, 16)
