code section devmobile and redirect

--- a/ecoleinfographie/resources/assets/stylus/base/_titles.styl
+++ b/ecoleinfographie/resources/assets/stylus/base/_titles.styl
@@ -24,7 +24,7 @@
   font-weight 700
   color $cBlueTitles
 
-.titleXXL
+.titleXXL // 33.2
   font-size s($text-XXL)
   line-height 1.1
   letter-spacing 0.75px
