--- a/ecoleinfographie/resources/assets/stylus/components/footer.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/footer.styl
@@ -1,5 +1,6 @@
 .footer__container
   background-color $cBlueTitles
+  margin-top s(200)
 .footer__wrapper
   clearfix()
 .footer
@@ -121,3 +122,6 @@
       &:before
         background $cWhite
         opacity 0.2
+
+.home .footer__container
+  margin-top 0
