--- a/ecoleinfographie/resources/assets/stylus/settings/sizes.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/sizes.styl
@@ -14,10 +14,17 @@ $sz1 = 64.85
 $sz2 = 51.88
 $sz9 = 13
 
+.containerGridz
+  containerGridz()
+  padding 0 s($paddingSideGlobal)
+  box-sizing content-box
+
 // GridzWidth
 containerGridz()
   max-width s($ws_sGridzTotalWidth, 16)
   margin 0 auto
 
 $paddingSideGlobal = 40
+
+
 
