--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -51,6 +51,7 @@
 @import "components/_dots.styl"
 @import "components/_arrow-circle.styl"
 @import "components/_breadcrumb.styl"
+@import "components/_redirect.styl"
 //// HOME
 @import "components/home/intro.styl"
 @import "components/home/location.styl"
