--- a/ecoleinfographie/resources/assets/stylus/base/base.styl
+++ b/ecoleinfographie/resources/assets/stylus/base/base.styl
@@ -5,6 +5,7 @@ html
   background-position center center
   background-size 1240px
   //opacity 0.9
+  background #FFF
 
 html *
   box-sizing border-box
