anim page metiers-du-web

--- a/ecoleinfographie/resources/assets/stylus/components/web_home/web_home.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/web_home/web_home.styl
@@ -52,6 +52,19 @@
     position: absolute
     right: s(-150)
     top s(170)
+    opacity 0
+    transform translateX(250px)
+
+.no-js .webdesigner__img
+  opacity 1
+  transform none
+
+.webdesigner.anim-webdesigner
+  .webdesigner__img
+    opacity 1
+    transform translateX(0)
+    transition .5s ease all
+
 
 .webintegrator
   min-height s(740)
@@ -68,11 +81,30 @@
     top s(-50)
     z-index 1
     max-width none
+    transform translateX(-70px)
+    opacity 0
   &__img--2
     position: absolute
     top s(270)
     left s(165)
     z-index 2
+    transform translateY(50px)
+
+.no-js
+  .webintegrator__img
+  .webdesigner__img--2
+    transform none
+
+.webintegrator.anim-webintegrator-screen
+  .webintegrator__img
+    transform translateX(0)
+    opacity 1
+    transition .5s ease all
+.webintegrator .anim-webintegrator-ipads
+  .webintegrator__img--2
+    transform translateX(0)
+    opacity 1
+    transition .5s ease all
 
 
 .frontend
@@ -138,11 +170,25 @@
     top s(-280)
     z-index 1
     max-width none
+    transform rotateY(25deg)
   &__img--2
     position: absolute
     top s(50)
     left s(-250)
     z-index 2
+    transform translateX(50px)
+
+.no-js .devbackend .devbackend__img
+.no-js .devbackend .devbackend__img--2
+  transform none
+
+.devbackend .devbackend__img.anim-devbackend-imac
+  transform rotateY(0)
+  transition .5s ease transform
+.devbackend .devbackend__img--2.anim-devbackend-code
+  transform translateX(0)
+  transition .5s ease transform
+
 
 .webmobile
   min-height s(740)
@@ -165,16 +211,39 @@
     position absolute
     top s(-180)
     right s(-70)
+    transform translate(200px, -100px);
+    opacity 0
   &__img--2
     position absolute
     top s(40)
     right s(-320)
+    transform translate(200px, -100px);
+    opacity 0
   &__img--3
     position absolute
     top s(360)
     right s(150)
+    transform translate(-200px, 100px);
+    opacity 0
   &__img--4
     position absolute
     top s(400)
     right s(-460)
+    transform translate(200px, -100px);
+    opacity 0
+
+.no-js .webmobile__img--1
+.no-js .webmobile__img--2
+.no-js .webmobile__img--3
+.no-js .webmobile__img--4
+  transform none
+  opacity 1
+
+.webmobile .webmobile__img--1.anim-webmobile-img-1
+.webmobile .webmobile__img--2.anim-webmobile-img-2
+.webmobile .webmobile__img--3.anim-webmobile-img-3
+.webmobile .webmobile__img--4.anim-webmobile-img-4
+  transform translate(0)
+  opacity 1
+  transition .3s ease-out all
 
