update app.styl and modify blade.php

--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -59,8 +59,9 @@
 @import "components/home/sliderBlog.styl"
 @import "components/home/portfolio-home.styl"
 @import "components/home/pros-home.styl"
-//// WebHome
-@import "components/web_home/web_home.styl"
+//// Web
+@import "components/web/web_home.styl"
+@import "components/web/web_formation.styl"
 
 
 // Trumps
