--- a/ecoleinfographie/resources/assets/stylus/components/_breadcrumb.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/_breadcrumb.styl
@@ -8,27 +8,42 @@
       icon('house')
       font-size 14px
       margin-right s(10, 14)
-      color rgba(255,255,255,.75)
+      color $cBlueCiel
       transition .2s ease color
     &:hover:before
     &:focus:before
-      color rgba(255,255,255,1)
+      color $cBlueCiel
       transition .3s ease color
     &:after
       icon('chevron-right')
       font-size 8px
       margin-right s(10, 8)
-      color rgba(255,255,255,.75)
+      color $cBlueCiel
     & span
       @extend .hidden
   &__link
     & span
       font-size s($sz9)
       font-weight: 500
-      letter-spacing 0.4px
+  &__link--active span
+    color $cBlack
+
+/************************************\
+        Breadcrumb_large
+\************************************/
 
 .breadcrumb.breadcrumb--header
   position: absolute
   top 30%
+  & .breadcrumb__link--home
+      &:before
+        color rgba(255,255,255,1)
+      &:hover:before
+      &:focus:before
+        color rgba(255,255,255,1)
+      &:after
+        color rgba(255,255,255,.75)
+  & .breadcrumb__link span
+    letter-spacing 0.4px
   & .breadcrumb__link--active span
     color $cWhite
