css shawl header-min

--- a/ecoleinfographie/resources/assets/stylus/components/global.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/global.styl
@@ -20,5 +20,9 @@ baseShawl(backgroundColor, skew)
   position: relative
   baseShawl($cWhite, 4.5deg)
 
+.container--header-min
+  &:before
+    transform skewY(0.8deg)
+
 
 
