update breadcrumb style and sizes.styl

--- a/ecoleinfographie/resources/assets/stylus/settings/sizes.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/sizes.styl
@@ -14,9 +14,11 @@ $sz1 = 64.85
 $sz2 = 51.88
 $sz9 = 13
 
+$paddingSideGlobal = 40
+
 .containerGridz
   containerGridz()
-  padding 0 s($paddingSideGlobal)
+  padding 0 40px
   box-sizing content-box
 
 // GridzWidth
