--- a/ecoleinfographie/resources/assets/stylus/components/_breadcrumb.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/_breadcrumb.styl
@@ -28,6 +28,8 @@
   &__link--active span
     color $cBlack
 
+.breadcrumb
+  @extend .containerGridz
 /************************************\
         Breadcrumb_large
 \************************************/
