style intro-formation

--- a/ecoleinfographie/resources/assets/stylus/settings/colors.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/colors.styl
@@ -15,6 +15,7 @@ $cSchool = #9B9B9B
 
 $cBlueGreyLight = #F5F5FA
 $cBackgroundBlueGrey = #F3F3F7
+$cBackgroundGrey = #F7F7F9
 $cBlueCiel = #136A8A
 
 $cGrey-lineMenu = #D5D5D9
@@ -29,3 +30,7 @@ $cTwitter = #55acee
 $cPinterest = #cb2027
 $cBehance = #1769ff
 $cDribble = #ea4c89
+
+$cGrey1 = #BABABA
+
+$cBlue1 = #004966
