--- a/ecoleinfographie/resources/assets/stylus/settings/icons.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/icons.styl
@@ -39,7 +39,8 @@ $ws_icon-list =       "arrow-left"   "\e900",
                       "world2"   "\e926",
                       "logo2D"   "\e927",
                       "logo3D"    "\e928",
-                      "logoweb"   "\e929"
+                      "logoweb"   "\e929",
+                      "arrow-bottom"    "\e92b",
 
 
 
