--- a/ecoleinfographie/resources/assets/stylus/settings/sizes.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/sizes.styl
@@ -12,6 +12,10 @@ $text-L = 21.25
 
 $sz1 = 64.85
 $sz2 = 51.88
+$sz4 = 33.2
+$sz5 = 26.56
+$sz6 = 21.25
+$sz8 = 17
 $sz9 = 13
 
 $paddingSideGlobal = 40
