--- a/ecoleinfographie/resources/assets/stylus/components/_breadcrumb.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/_breadcrumb.styl
@@ -1,4 +1,5 @@
 .breadcrumb
+  padding-top s(45)
   &__title
     @extend .hidden
   &__item
@@ -30,13 +31,14 @@
 
 .breadcrumb
   @extend .containerGridz
+
 /************************************\
         Breadcrumb_large
 \************************************/
-
 .breadcrumb.breadcrumb--header
   position: absolute
   top 30%
+  padding 0
   & .breadcrumb__link--home
       &:before
         color rgba(255,255,255,1)
