--- a/ecoleinfographie/resources/assets/stylus/components/web/web_formation.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/web/web_formation.styl
@@ -211,6 +211,7 @@
 
 .formation-choice
   @extend .containerGridz
+  margin-bottom s(315)
   &__wrapper
     position: relative
     background-color $cWhite
@@ -234,3 +235,99 @@
       color inherit
       font-size inherit
       font-weight 600
+
+
+/************************************\
+		BLOCS
+\************************************/
+
+.bloc
+  position: relative
+  background-color $cWhite
+  baseShawl($cWhite, 4.5deg)
+  &__container
+    @extend .containerGridz
+    padding s(25) 0 0 0
+  &__title *
+    display: block
+    color $cBlueTitles
+    text-transform uppercase
+  &__title
+    margin 0 0 0 col(1,12)
+  &__title span
+    font-size s($sz5)
+    margin-bottom s(5, $sz5)
+  &__title strong
+    position: relative
+    display: inline-block
+    font-size s($sz4)
+    font-weight 700
+    letter-spacing 0.5px
+    margin-bottom s(55, $sz4)
+    &:after
+      content ''
+      display: block
+      width s(74, $sz4)
+      height s(5, $sz4)
+      margin-top s(20, $sz4)
+      background-color $cBlueTitles
+      position absolute
+      left: 0
+  &__intro
+    margin 0 0 s(75) col(1,12)
+    width col(6,12) + (gutter(12)*2)
+    @extend .paragraph21
+
+.bloc--2
+  background-color $cGreyLight
+  &:before
+    background-color $cGreyLight
+
+.bloc .course
+  clearfix(left)
+  &__item
+    float: left
+    width col(4,12) + (gutter(12)*2)
+    margin-left col(1,12)
+    margin-right col(2,12)
+    margin-bottom s(110)
+    &:last-child
+      margin-bottom s(200)
+    &:nth-child(2n+2)
+      margin-left 0
+      margin-right 0
+  &__title-wrapper
+    position: relative
+    margin-bottom s(20)
+    clearfix()
+    & svg
+      width 40px
+      height auto
+      float: left;
+  &__title
+    position absolute
+    left s(60, $sz6)
+    top: 50% - 7px
+    transform: translateY(-50%)
+    font-size:s($sz6)
+    color $cBlueTitles
+    text-transform: uppercase
+    letter-spacing 0.7px
+    line-height: 1.1
+    font-weight 600
+  &__text
+    font-size s($sz7)
+    line-height: 1.62em
+    margin-bottom s(20, $sz7)
+  &__link
+    @extend .linkArrowLarge
+    margin-top s(15, $sz7)
+    font-size s($sz8)
+    &:after
+      position: relative
+      top 1px
+      font-size s(12, $sz8)
+      margin-left  s(6, $sz8)
+    & span
+      @extend .hidden
+
