import redirect to formation-web

--- a/ecoleinfographie/resources/assets/stylus/components/web/web_formation.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/web/web_formation.styl
@@ -3,6 +3,10 @@
     background-color $cBackgroundGrey
     &:before
       background-color $cBackgroundGrey
+  .redirect-container
+    background-color $cWhite
+  .redirect
+    margin-top 0
 
 .formation-container-top
   @extend .containerGridz
