style cards redirect to bloc formation

--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -62,7 +62,8 @@
 //// Web
 @import "components/web/web_home.styl"
 @import "components/web/web_formation.styl"
-
+//// Global
+@import "components/program.styl"
 
 // Trumps
 // --- nothing here (yet)
