--- a/ecoleinfographie/resources/assets/stylus/base/_utils.styl
+++ b/ecoleinfographie/resources/assets/stylus/base/_utils.styl
@@ -12,6 +12,13 @@
   top: -99999px
   left: -99999px
 
+
+.clearfix
+  &:after
+    content: ""
+    display: block
+    clear: both
+
 // Shawl // In before or after
 .baseshawl
   content: "";
