--- a/ecoleinfographie/resources/assets/stylus/base/base.styl
+++ b/ecoleinfographie/resources/assets/stylus/base/base.styl
@@ -4,8 +4,8 @@ html
   background-repeat repeat-y
   background-position center center
   background-size 1240px
-  background #FFF
-  opacity 0.9
+  //background #FFF
+  //opacity 0.9
 
 html *
   box-sizing border-box
