--- a/ecoleinfographie/resources/assets/stylus/settings/colors.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/colors.styl
@@ -17,6 +17,7 @@ $cBlueGreyLight = #F5F5FA
 $cBackgroundBlueGrey = #F3F3F7
 $cBackgroundGrey = #F7F7F9
 $cBlueCiel = #136A8A
+$cGreen = #267871
 
 $cGrey-lineMenu = #D5D5D9
 $cText-greyblue = #566273
