--- a/ecoleinfographie/resources/assets/stylus/settings/icons.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/icons.styl
@@ -41,6 +41,7 @@ $ws_icon-list =       "arrow-left"   "\e900",
                       "logo3D"    "\e928",
                       "logoweb"   "\e929",
                       "arrow-bottom"    "\e92b",
+                      "arrow-bottom-2"  "\e92a",
 
 
 
