code part intro table program page

--- a/ecoleinfographie/resources/assets/stylus/base/_titles.styl
+++ b/ecoleinfographie/resources/assets/stylus/base/_titles.styl
@@ -31,6 +31,12 @@
   font-weight 700
   color $cBlueTitles
 
+.title4
+  font-size s($sz4)
+  line-height 1.1
+  letter-spacing 0.75px
+  font-weight 700
+  color $cBlueTitles
 .titleXL
   font-size s($text-XL)
   line-height 1.1
