--- a/ecoleinfographie/resources/assets/stylus/settings/colors.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/colors.styl
@@ -32,9 +32,8 @@ $cPinterest = #cb2027
 $cBehance = #1769ff
 $cDribble = #ea4c89
 
-$cGrey1 = #BABABA
-
 $cBlue1 = #004966
 $cBlue2 = #69788C
 
 $cGrey1 = #DADADA
+$cGrey2 = #9B9B9B
